--- a/hscamwire.cabal
+++ b/hscamwire.cabal
@@ -13,6 +13,6 @@ Cabal-Version:	     >=1.2
 Extra-Source-Files:  README clib/camwire/camwire.h clib/camwire/camwirebus.h clib/camwire_1394.c clib/camwire_1394_cache_working.c clib/camwirebus_1394.c clib/camwirebus_internal_1394.h clib/camwiremacros_1394.h clib/Makefile
 
 Library
-        build-depends: base, unix, array, time
+        build-depends: base >= 3 && < 4, unix, array, time
         Exposed-Modules: System.Camera.IIDC1394 System.Camera.IIDC1394.Camwire
-        ghc-options:         -Wall -threaded
+        ghc-options:         -Wall
